additional fixes to invisible element style.

--- a/themes/esquif/sass/hacks.scss
+++ b/themes/esquif/sass/hacks.scss
@@ -7,4 +7,6 @@
 
 .element-invisible {
   width: 1px;
+  padding: 0;
+  border: 0;
 }
